girepository: Document semantics of dependencies and includes better

Make it clear that both the dependencies field in the typelib, and the
include elements in the GIR AST, are for immediate dependencies, not
transitive ones.

https://bugzilla.gnome.org/show_bug.cgi?id=743782